# cmake-init-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh  postStartCommand.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: app_test.cpp
